--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,16 @@
-*, *::before, *::after 
-{
+*, *::before, *::after {
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: normal;
 }
 
-body
-{
+body {
     padding: 0;
     margin: 0;
     background: linear-gradient(to right, #0083ff, #002d5b);
 }
 
-.calculator-grid 
-{
+.calculator-grid {
     display: grid;
     justify-content: center;
     align-items: center;
@@ -22,29 +19,25 @@ body
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
-.calculator-grid  > button
-{
+.calculator-grid  > button {
     cursor: pointer;
     font-size: 2rem;
     border: 1px solid #FFFFFF;
     outline: none;
-    background-color: rgb(225, 225, 225, .75);
+    background-color: rgba(225, 225, 225, .75);
 }
 
-.calculator-grid  > button:hover
-{
-    background-color: rgb(225, 225, 225, .9);
+.calculator-grid  > button:hover {
+    background-color: rgba(225, 225, 225, .9);
 }
 
-.span-two 
-{
+.span-two {
     grid-column: span 2;
 }
 
-.output
-{
+.output {
     grid-column: 1 / -1;
-    background-color: rgb(1, 1, 1, .75);
+    background-color: rgba(0, 0, 0, .75);
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
@@ -52,4 +45,14 @@ body
     padding: 10px;
     word-wrap: break-word;
     word-break: break-all;
+}
+
+.output .previous-operand {
+    color:rgba(255, 255, 255, .75);
+    font-size: 1.5rem;
+}
+
+.output .current-operand {
+    color: #FFFFFF;
+    font-size: 2.5rem;
 }
