--- a/styles.css
+++ b/styles.css
@@ -13,22 +13,22 @@ body {
 .calculator-grid {
     display: grid;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     min-height: 100vh;
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
-.calculator-grid  > button {
+.calculator-grid > button {
     cursor: pointer;
     font-size: 2rem;
     border: 1px solid #FFFFFF;
     outline: none;
-    background-color: rgba(225, 225, 225, .75);
+    background-color: rgba(255, 255, 255, .75);
 }
 
 .calculator-grid  > button:hover {
-    background-color: rgba(225, 225, 225, .9);
+    background-color: rgba(255, 255, 255, .9);
 }
 
 .span-two {
@@ -48,7 +48,7 @@ body {
 }
 
 .output .previous-operand {
-    color:rgba(255, 255, 255, .75);
+    color: rgba(255, 255, 255, .75);
     font-size: 1.5rem;
 }
 
